# mkpar

./: AGENTS.md  CHANGELOG.md  Cargo.toml
src/: command.rs  create_parent_directories.rs  lib.rs  main.rs
