[package]
name = "mkpar"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = ""
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/mkpar"
repository = "https://github.com/DenisGorbachev/mkpar"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    ".yolobox"
]

[package.metadata.details]
title = ""
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
errgonomic = { version = "0.5.1" }
thiserror = "2.0.18"
